# GameGureumi

./: .bazelrc  .gitignore  LICENSE  MODULE.bazel  README.md  REPO.bzl  build.gradle  projectview.bazelproject  settings.gradle
.github/: CODEOWNERS
docs/: CNAME  index.html  repo-data.json
documents/: main.md
documents/architecture/: architecture.md
documents/conventions/: convention.md
documents/conventions/api/: response.md
documents/conventions/common/: common.md
documents/conventions/git/: branch-strategy.md  commit-message.md
documents/conventions/java/: exception.md  message-and-log.md
documents/conventions/vault/: policy.md
documents/environment/: coreos-installation-guide.md  environment.md
pages/: index.html
sources/applications/spring-test-server/: BUILD.bazel
sources/applications/spring-test-server/src/main/java/io/github/aikusoni/gamegureumi/spring/testserver/: SpringTestServerApplication.java
sources/applications/spring-test-server/src/main/java/io/github/aikusoni/gamegureumi/spring/testserver/config/: CorsConfig.java
sources/applications/spring-test-server/src/main/java/io/github/aikusoni/gamegureumi/spring/testserver/constants/: TestMessageCode.java
sources/applications/spring-test-server/src/main/java/io/github/aikusoni/gamegureumi/spring/testserver/controller/: TestController.java
sources/applications/spring-test-server/src/main/resources/: application.yml  logback-spring.xml
sources/applications/spring-test-server/src/main/resources/messages/: test_messages_en.properties  test_messages_ko.properties
sources/applications/spring-test-server/src/test/java/io/github/aikusoni/ats/spring/testserver/: TestServerSpringApplicationTests.java
sources/libraries/spring-core/: BUILD.bazel  build.gradle
sources/libraries/spring-core/gradle/wrapper/: gradle-wrapper.properties
sources/libraries/spring-core/src/main/java/io/github/aikusoni/gamegureumi/spring/core/common/: BaseErrorCode.java  MessageCode.java  MessageUtils.java
sources/libraries/spring-core/src/main/java/io/github/aikusoni/gamegureumi/spring/core/config/: MessageConfig.java
sources/libraries/spring-core/src/main/java/io/github/aikusoni/gamegureumi/spring/core/constants/: CoreMessageCode.java  CustomErrorCodeExample.java  ErrorCode.java  NoticeLevel.java
sources/libraries/spring-core/src/main/java/io/github/aikusoni/gamegureumi/spring/core/exception/: ATSException.java  ATSRuntimeException.java  BaseAtsException.java  BaseGureumiException.java  GureumiException.java  GureumiRuntimeException.java
sources/libraries/spring-core/src/main/java/io/github/aikusoni/gamegureumi/spring/core/utils/: DateTimeUtils.java  IntegerUtils.java  LongUtils.java  StringUtils.java
sources/libraries/spring-core/src/main/resources/messages/: core_messages.properties  core_messages_ko.properties
sources/libraries/spring-core/src/test/java/io/github/aikusoni/gamegureumi/spring/core/config/: MessageSourceTest.java  MessageSourceTests.java
sources/libraries/spring-core/src/test/java/io/github/aikusoni/gamegureumi/spring/core/utils/: DateTimeUtilsTest.java  DateTimeUtilsTests.java  MessageUtilsTest.java  MessageUtilsTests.java
sources/libraries/spring-mvc-standard/: BUILD.bazel  build.gradle  settings.gradle
sources/libraries/spring-mvc-standard/gradle/wrapper/: gradle-wrapper.properties
sources/libraries/spring-mvc-standard/src/main/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/advice/: CheckRole.java  CheckRoleAdvice.java  RestExceptionHandler.java
sources/libraries/spring-mvc-standard/src/main/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/config/: LocaleConfig.java
sources/libraries/spring-mvc-standard/src/main/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/constants/: WebMvcMessageCode.java
sources/libraries/spring-mvc-standard/src/main/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/model/view/: GureumiResponseBody.java
sources/libraries/spring-mvc-standard/src/main/resources/messages/: mvc_standard_messages.properties  mvc_standard_messages_en.properties  mvc_standard_messages_ko.properties
sources/libraries/spring-mvc-standard/src/test/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/advice/: CheckRoleTestController.java  CheckRoleTestControllerTest.java  CheckRoleTestsController.java  CheckRoleTestsControllerTests.java
sources/libraries/spring-mvc-standard/src/test/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/config/: LocaleConfigTest.java  LocaleConfigTestController.java  LocaleConfigTests.java  LocaleConfigTestsController.java
sources/libraries/spring-mvc-standard/src/test/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/constants/: WebMvcTestMessageCode.java
sources/libraries/spring-mvc-standard/src/test/java/io/github/aikusoni/gamegureumi/spring/mvcstandard/model/view/: GureumiResponseBodyTest.java  GureumiResponseBodyTestController.java  GureumiResponseBodyTests.java  GureumiResponseBodyTestsController.java
sources/libraries/spring-mvc-standard/src/test/resources/messages/: mvc_standard_test_messages_en.properties  mvc_standard_test_messages_ko.properties
sources/plugins/: BUILD.bazel
