module(
    name = "io_github_aikusoni_gamegureumi",
    version = "0.0.1",
)

bazel_dep(name = "rules_java", version = "8.6.3")
bazel_dep(name = "rules_jvm_external", version = "6.6")
bazel_dep(name = "contrib_rules_jvm", version = "0.27.0")

SPRING_BOOT_VERSION = "3.4.1"
SPRING_VERSION = "6.2.1"
JUNIT_JUPITER_VERSION = "5.11.4"
JUNIT_PLATFORM_VERSION = "1.11.4"
LOMBOK_VERSION = "1.18.36"

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    artifacts = [
        "org.junit.platform:junit-platform-console:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-commons:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-engine:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-suite-api:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-launcher:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.platform:junit-platform-reporting:%s" % JUNIT_PLATFORM_VERSION,
        "org.junit.jupiter:junit-jupiter-api:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-engine:%s" % JUNIT_JUPITER_VERSION,
        "org.junit.jupiter:junit-jupiter-params:%s" % JUNIT_JUPITER_VERSION,
        "org.springframework.boot:spring-boot:%s" % SPRING_BOOT_VERSION,
        "org.springframework.boot:spring-boot-starter:%s" % SPRING_BOOT_VERSION,
        "org.springframework.boot:spring-boot-starter-web:%s" % SPRING_BOOT_VERSION,
        "org.springframework.boot:spring-boot-starter-aop:%s" % SPRING_BOOT_VERSION,
        "org.springframework.boot:spring-boot-starter-test:%s" % SPRING_BOOT_VERSION,
        "org.springframework:spring-context:%s" % SPRING_VERSION,
        "org.springframework:spring-core:%s" % SPRING_VERSION,
        "org.springdoc:springdoc-openapi-starter-webmvc-ui:2.6.0",
        "org.projectlombok:lombok:%s" % LOMBOK_VERSION,
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
)
use_repo(maven, "maven")