load("@rules_java//java:defs.bzl", "java_library", "java_plugin")

java_plugin(
    name = "lombok_plugin",
    generates_api = True,
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "gg-spring-mvc-standard",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = [
    ],
    plugins = [
        ":lombok_plugin",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "//sources/libraries/spring-core:gg-spring-core",
        "@maven//:com_fasterxml_jackson_core_jackson_annotations",
        "@maven//:org_apache_tomcat_embed_tomcat_embed_core",
        "@maven//:org_aspectj_aspectjweaver",
        "@maven//:org_projectlombok_lombok",
        "@maven//:org_slf4j_slf4j_api",
        "@maven//:org_springframework_boot_spring_boot",
        "@maven//:org_springframework_boot_spring_boot_starter",
        "@maven//:org_springframework_boot_spring_boot_starter_aop",
        "@maven//:org_springframework_boot_spring_boot_starter_web",
        "@maven//:org_springframework_spring_context",
        "@maven//:org_springframework_spring_core",
        "@maven//:org_springframework_spring_web",
        "@maven//:org_springframework_spring_webmvc",
    ],
)
