load("@rules_java//java:defs.bzl", "java_library", "java_plugin")
load("@rules_jvm_external//:defs.bzl", "artifact")

java_plugin(
    name = "lombok_plugin",
    generates_api = True,
    processor_class = "lombok.launch.AnnotationProcessorHider$AnnotationProcessor",
    deps = ["@maven//:org_projectlombok_lombok"],
)

java_library(
    name = "gg-spring-mvc-standard",
    srcs = glob(["src/main/java/**/*.java"]),
    javacopts = [
    ],
    plugins = [
        ":lombok_plugin",
    ],
    resources = glob(["src/main/resources/**/*"]),
    visibility = ["//visibility:public"],
    deps = [
        "//sources/libraries/spring-core:gg-spring-core",
        artifact("org.springframework.boot:spring-boot"),
        artifact("org.springframework.boot:spring-boot-starter"),
        artifact("org.springframework.boot:spring-boot-starter-aop"),
        artifact("org.springframework.boot:spring-boot-starter-web"),
        artifact("org.springframework:spring-context"),
        artifact("org.springframework:spring-core"),
        artifact("org.springframework:spring-web"),
        artifact("org.springframework:spring-webmvc"),
        artifact("org.projectlombok:lombok"),
        artifact("org.aspectj:aspectjweaver"),
        artifact("org.slf4j:slf4j-api"),
        artifact("com.fasterxml.jackson.core:jackson-annotations"),
        artifact("org.apache.tomcat.embed:tomcat-embed-core"),
    ],
)

java_test(
    name = "gg-spring-mvc-standard-test",
    srcs = glob(["src/test/java/**/*.java"]),
    args = [
        "--select-package",
        "io.github.aikusoni.gamegureumi",
    ],
    main_class = "org.junit.platform.console.ConsoleLauncher",
    plugins = [
        ":lombok_plugin",
    ],
    resources = glob(["src/test/resources/**/*"]),
    use_testrunner = False,
    runtime_deps = [
        artifact("org.junit.platform:junit-platform-commons"),
        artifact("org.junit.platform:junit-platform-console"),
        artifact("org.junit.platform:junit-platform-engine"),
        artifact("org.junit.platform:junit-platform-launcher"),
        artifact("org.junit.platform:junit-platform-suite-api"),
    ],
    deps = [
        ":gg-spring-mvc-standard",
        "//sources/libraries/spring-core:gg-spring-core",
        artifact("org.springframework.boot:spring-boot-autoconfigure"),
        artifact("org.springframework.boot:spring-boot-test-autoconfigure"),
        artifact("org.springframework:spring-test"),
        artifact("org.junit.jupiter:junit-jupiter-api"),
        artifact("org.junit.jupiter:junit-jupiter-engine"),
        artifact("org.junit.jupiter:junit-jupiter-params"),
        artifact("org.junit.platform:junit-platform-suite-api"),
        artifact("org.projectlombok:lombok"),
        artifact("org.springframework.boot:spring-boot"),
        artifact("org.springframework.boot:spring-boot-starter"),
        artifact("org.springframework.boot:spring-boot-starter-test"),
        artifact("org.springframework.boot:spring-boot-test"),
        artifact("org.springframework:spring-beans"),
        artifact("org.springframework:spring-context"),
        artifact("org.springframework:spring-core"),
        artifact("org.springframework:spring-web"),
        artifact("org.springframework:spring-webmvc"),
        artifact("org.aspectj:aspectjweaver"),
        artifact("org.slf4j:slf4j-api"),
        artifact("com.fasterxml.jackson.core:jackson-annotations"),
        artifact("org.apache.tomcat.embed:tomcat-embed-core"),
    ],
)
